Final final touches

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.radio_button">
    <application
-        android:label="radio_button"
+        android:label="H5 App identity"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
